# Distributed-Diagnostic-Update-Framework

./: .gitignore  README.md  deploy-all.sh  deploy.md
client/: CMakeLists.txt  README.md  agent_config.json
client/deployable_version/: CMakeLists.txt
client/dev_version/: CMakeLists.txt
client/include/: ActiveSurveillanceModule.h  CommandHandler.h  CommandModule.h  CommandRegistry.h  ConfigModule.h  Crypto.h  DynamicDispatcher.h  Fingerprint.h  FingerprintModule.h  Globals.h  HttpHeaderRandomizer.h  IPC.h  KeyExchange.h  Loader.h  MemoryLoader.h  Module.h  Obfuscation.h  PayloadDecryptor.h  PersistenceModule.h  ReconAdvancedModule.h  ReconModule.h  RequestSigner.h  TaskScheduler.h  UpdateHandler.h  Wipe.h
client/include/AntiForensic/: PPIDSpoofingStub.h  ProcessHollowingStub.h
client/shared_libs/: CMakeLists.txt
client/src/: ActiveSurveillanceModule.cpp  CommandDeepSleep.cpp  CommandHandler.cpp  CommandRegistry.cpp  CommandSafeMode.cpp  CommandWipe.cpp  ConfigModule.cpp  Crypto.cpp  DynamicDispatcher.cpp  Fingerprint.cpp  FingerprintModule.cpp  Globals.cpp  HttpHeaderRandomizer.cpp  IPCServer.cpp  KeyExchange.cpp  Loader.cpp  MemoryLoader.cpp  PayloadDecryptor.cpp  PersistenceModule.cpp  ReconAdvancedModule.cpp  ReconModule.cpp  RequestSigner.cpp  TaskScheduler.cpp  UpdateHandler.cpp  Wipe.cpp  main.cpp
client/src/AntiForensic/: PPIDSpoofingStub.cpp  ProcessHollowingStub.cpp
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx  Login.tsx  api.ts  index.css  shims.d.ts
frontend/src/api/: useAgent.ts  useAgents.ts  useApiKeys.ts  useAuditLogs.ts  useCommands.ts  useConfig.ts  useLogs.ts  useSendCommand.ts  useSurveillance.ts  useTemplates.ts
frontend/src/components/: Modal.tsx  Spinner.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx
frontend/src/features/agents/: AgentDetail.tsx
frontend/src/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/: Agents.tsx  ApiKeys.tsx  AuditLog.tsx  Commands.tsx  Dashboard.tsx  Logs.tsx  Settings.tsx  Surveillance.tsx  Templates.tsx
server/: README.md  app.py  cleanup_keys.py  config.json  migrate_keys.py  requirements.txt
